# AfterWords

./: .gitignore  README.md  app.py  deploy_app.sh  run_app.sh  test_local_app.sh  voice_cleanup.py
membox/: Dockerfile.api  deploy.sh  pyproject.toml  requirements.txt
membox/containers/: Dockerfile.cleanup
membox/membox/: __main__.py  utils.py  voice_cleanup.py
terraform/: dynamo_db.tf  ecr.tf  event_hub.tf  lambda.tf  main.tf
