[tool.poetry]
name = "membox"
version = "0.1.0"
description = ""
authors = ["Omar Jabri"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydub = "0.25.1"
python-dotenv = "1.0.1"
requests = "2.31.0"
scipy = "1.11.2"
tts = "0.22.0"
voicefixer = "0.1.3"
deep-translator = "^1.11.4"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
membox = "membox.__main__:main"